--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "sass": "^1.51.0",
+    "swiper": "^8.2.6",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
   },
