--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
+    "json-form-data": "^1.7.2",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
