--- a/package.json
+++ b/package.json
@@ -3,32 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.18",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.6",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "axios": "^0.27.2",
-    "formik": "^2.2.9",
+    "@mui/icons-material": "^5.14.1",
+    "@mui/material": "^5.14.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "formik": "^2.4.2",
+    "gapi-script": "^1.2.0",
     "json-form-data": "^1.7.2",
     "moment": "^2.29.4",
-    "node-sass": "^7.0.1",
-    "react": "^18.1.0",
+    "react": "^18.2.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-detect-click-outside": "^1.1.7",
-    "react-dom": "^18.1.0",
-    "react-router-dom": "6",
+    "react-dom": "^18.2.0",
+    "react-facebook-login": "^4.1.1",
+    "react-fb-social-login": "^4.1.1",
+    "react-google-button": "^0.7.2",
+    "react-google-login": "^5.2.2",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
-    "sass": "^1.51.0",
-    "swiper": "^8.2.6",
-    "web-vitals": "^2.1.0",
-    "yup": "^0.32.11"
+    "react-social-login-buttons": "^3.9.1",
+    "react-swiper": "^0.1.5",
+    "reactjs-social-login": "^2.6.2",
+    "sass": "^1.64.1",
+    "swiper": "^10.0.4",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
